Fixed broken widget image size for large-sized widgets
* Image was overflowing out of widget boundaries on desktop.

--- a/src/public/components/Widget/WidgetBox.css
+++ b/src/public/components/Widget/WidgetBox.css
@@ -68,4 +68,8 @@
     .LargeWidget {
         width: calc(600px + 2rem);
     }
+
+    .LargeWidget .ErrorMessage img {
+        width: 20%;
+    }
 }
